--- a/stock-chart/server/package.json
+++ b/stock-chart/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "request-promise": "^4.2.2",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
